--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
-    "express": "^5.2.1"
-  }
+    "express": "^5.2.1",
+    "mongoose": "^9.1.1",
+    "nodemon": "^3.1.11"
+  },
+  "description": "",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
