--- a/Server/package.json
+++ b/Server/package.json
@@ -7,12 +7,13 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "nodemon": "^3.1.11"
   },
   "description": "",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
